fixing issue with menu z-index

--- a/src/gizmoMenu.scss
+++ b/src/gizmoMenu.scss
@@ -4,6 +4,9 @@ $animationDuration: 350;
 $responsiveView: 585px;
 
 header{
+
+	z-index: 9999;
+
 	.mobileNav{
 		display:none;
 	}
